# rust-fs-delta-tracker

./: .gitignore  Cargo.toml  README.md  sample.env
assets/templates/sql/: init_db.sql  process_staging_v2.sql
src/: lib.rs
src/lib/: crawler.rs  data.rs  db.rs  logging.rs
