[package]
name = "fs_delta_tracker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fs_delta_tracker"
path = "src/bin/standalone.rs"

[[bin]]
name = "initialize_db"
path = "src/bin/initialize_db.rs"

# [[bin]]
# name = "crawler"
# path = "src/bin/submodules/crawler.rs"

# [[bin]]
# name = "start_scan"
# path = "src/bin/submodules/start_scan.rs"

# [[bin]]
# name = "finish_scan"
# path = "src/bin/submodules/finish_scan.rs"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["fmt","env-filter"] }
anyhow = "1.0.98"
tracing-appender = "0.2.3"
dotenvy = "0.15"
chrono = "0.4.41"
walkdir = "2.5.0"
crossbeam-channel = "0.5.15"
ignore = "0.4.23"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3.31"
bytes = "1.10.1"
serde_json = "1.0.140"
include_dir = "0.7.4"
